# bmp-plugins

bmp-htmlplaylist/: COPYING  Makefile  README  bmp-htmlplaylist.c
bmp-rootvis/: AUTHORS  Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  ltmain.sh
bmp-rootvis/src/: Makefile.am  Makefile.in  config_backend.c  getroot.c  rootvis.c  rootvis.h
bmp-songchange/: AUTHORS  ChangeLog  Makefile.am  README  bootstrap  config.h.in  configure.in
bmp-songchange/src/: Makefile.am  song_change.c
bmp-wma/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  config.h.in  configure.in
bmp-wma/src/: Makefile.am  bmp-wma.c  iir.c  iir.h
bmp-wma/src/libffwma/: .cvsignore
bmp-wma/src/wma123/: .cvsignore  Makefile.am  playlist.c  playlist.h  wma123.c  wma123.h
pidof/: Makefile  pidof.c
