#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(bmp-rootvis, 0.0.1, bogorodskiy@inbox.ru)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PROG_LIBTOOL

# Checks for libraries.
PKG_CHECK_MODULES(BEEP, [bmp >= 0.9.7],
        [
         CFLAGS="$CFLAGS $BEEP_CFLAGS"
         LIBS="$LIBS $BEEP_LIBS"
        ],
        [AC_MSG_ERROR([BMP >= 0.9.7 development package not installed])]
)

BEEP_VISUALIZATION_PLUGIN_DIR=`$PKG_CONFIG --variable=visualization_plugin_dir bmp`

AC_SUBST(BEEP_VISUALIZATION_PLUGIN_DIR)

# Checks for header files.
AC_PATH_X
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([floor memset strcasecmp])

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
