#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(song_change, 0.0.2, bogorodskiy@inbox.ru)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/song_change.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL

# Checks for libraries.
PKG_CHECK_MODULES(BEEP, [bmp >= 0.9.7],
	[
	 CFLAGS="$CFLAGS $BEEP_CFLAGS"
	 LIBS="$LIBS $BEEP_LIBS"
	],
    	[AC_MSG_ERROR([BMP >= 0.9.7 development package not installed])]
)

BEEP_GENERAL_PLUGIN_DIR=`$PKG_CONFIG --variable=general_plugin_dir bmp`

AC_SUBST(BEEP_GENERAL_PLUGIN_DIR)

PKG_CHECK_MODULES(GTK, [gtk+-2.0 >= 2.4.0],
	[],
	[AC_MSG_ERROR([GTK+2 >= 2.4.0 development package not installed])]
)

DEBUG=""
AC_MSG_CHECKING([whether to include verbose debugging code])
AC_ARG_ENABLE(debug,
              [  --enable-debug include verbose debugging code [default=no]],
              if test x$enableval = "xyes"; then
                      AC_MSG_RESULT([yes])
                      DEBUG="-DDEBUG -g -Wall"
              else
                      AC_MSG_RESULT([no])
              fi,

              AC_MSG_RESULT([no])
)

AC_SUBST(DEBUG)
CFLAGS="$CFLAGS $DEBUG"

# Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.
AC_FUNC_FORK
AC_TYPE_SIGNAL
AC_CHECK_FUNCS([strchr])

AC_CONFIG_FILES([Makefile
		 src/Makefile])

AC_MSG_RESULT([])
AC_MSG_RESULT([ $PACKAGE version $VERSION configured successfully.])
AC_MSG_RESULT([])
AC_MSG_RESULT([Using '$CC' for C compiler.])
AC_MSG_RESULT([Building with '$CFLAGS' for C compiler flags.])
AC_MSG_RESULT([Building with '$LIBS' for linker flags.])
AC_MSG_RESULT([Installing plugin to $BEEP_GENERAL_PLUGIN_DIR.])
AC_MSG_RESULT([])

AC_OUTPUT
